[package]
name = "ivly"
version = "0.3.0"
authors = ["Kurt Lawrence <kurtlawrence.info>"]
edition = "2021"
description = "Command line tasks following the Ivy Lee method"
readme = "README.md"
homepage = "https://github.com/kurtlawrence/ivly"
repository = "https://github.com/kurtlawrence/ivly"
license = "MIT"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
comfy-table = "7.1.0"
crossterm = "0.27.0"
humantime = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
nanoid = "0.4.0"
ratatui = "0.26.1"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
insta = { version = "1.36.1", features = ["redactions", "ron"] }

